@@ -14627,6 +14627,8 @@ void LivingLifePage::step() {
                                              p_id, rocketO,
                                              lengthInSeconds );
 
+                        delayAgingMusic( lengthInSeconds );
+
                         if( ahapSteamKey != NULL ) {
                             delete [] ahapSteamKey;
                             }
